# llms-from-scratch-book

./: .gitignore  pyproject.toml
notebooks/: adding-special-context-tokens.ipynb  attention_score_and_dot_product.ipynb  attention_weights_for_all_tokens.ipynb  bpe_tokeniser.ipynb  byte-pair-encoding.ipynb  causal_attention.ipynb  create_token_embeddings.ipynb  data_sampling_with_a_sliding_window.ipynb  mapping-tokens-to-token-ids.ipynb  masked_attention.ipynb  self_attention_v1_&_v2.ipynb  self_attention_with_trainable_weights.ipynb  simple-regex-tokenisation.ipynb  simple_tokeniser.ipynb
notebooks/old-notebooks/: bpe_tokeniser.ipynb  causal_attention.ipynb  rough_checks.ipynb  train_llm.ipynb
resources/: verdict.txt
src/data/: data_ingestion.py
src/model/: causal_attention.py  final_run.py  model_training.py  train_model.py  transformer_block.py
src/model/archive/: causal_attention.py  model_training.py  train_model.py  transformer_block.py
