[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "better-exceptions>=0.3.3",
    "ipykernel>=6.29.5",
    "ipython>=8.28.0",
    "jupyterlab-vim>=4.1.4",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotnine[all]>=0.14.1",
    "polars>=1.9.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0",
]
